force-app/main/default/objects/Apex_Fault__e/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>Class name where the error occurred</description>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>