force-app/main/default/objects/Apex_Fault__e/fields/Error_Location__c.field-meta.xml
<CustomField>
    <fullName>Error_Location__c</fullName>
    <description>Where did the error occur</description>
    <label>Error Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>