force-app/main/default/objects/Apex_Fault__e/fields/Function_Name__c.field-meta.xml
<CustomField>
    <fullName>Function_Name__c</fullName>
    <description>Function name where the error occurred</description>
    <label>Function Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>