force-app/main/default/objects/Apex_Fault__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Salesforce record id, if any</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>